remove unused styles

--- a/src/app/cgu/cgu.component.html
+++ b/src/app/cgu/cgu.component.html
@@ -17,7 +17,7 @@
                 </div>
             </div>
             <div class="back">
-                <button (click)="goBack()" class="secondary-button-outlined" mat-button>
+                <button (click)="goBack()" color="primary" mat-stroked-button>
                     {{ 'cgu.backToHome' | translate }}
                 </button>
             </div>
@@ -31,7 +31,7 @@
 
 
             <div class="back">
-                <button (click)="goBack()" class="secondary-button-outlined" mat-button>
+                <button (click)="goBack()" color="primary" mat-stroked-button>
                     {{ 'cgu.backToHome' | translate }}
                 </button>
             </div>
