remove mat card outline appearance

--- a/src/app/chat/chat.component.scss
+++ b/src/app/chat/chat.component.scss
@@ -81,7 +81,7 @@ div.chat {
   background-color: var(--app-white);
   border-bottom-left-radius: 16px;
   border-bottom-right-radius: 16px;
-  box-shadow: 0 9px 5px 0 rgba(212, 210, 212, 1);
+  box-shadow: 0 4px 0px 0 #e9e5e9;
 
   .general-title {
     margin-top: 0;
