--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,7 +3,7 @@
   [icon]="'stat'"></app-top-nav>
 
 <div class="cards-container">
-  <mat-card appearance="outlined" class="card-left">
+  <mat-card class="card-left">
     <div class="desc">
       <h2 class="capitalize">
         {{ 'profile.profile' | translate }}
@@ -32,7 +32,7 @@
     </div>
   </mat-card>
 
-  <mat-card appearance="outlined" class="card-right">
+  <mat-card class="card-right">
     <div class="desc">
       <h2 class="capitalize">{{ 'profile.notification' | translate }}</h2>
       <p>
