--- a/src/variables.scss
+++ b/src/variables.scss
@@ -91,3 +91,19 @@
   --mdc-form-field-label-text-color: #1a1b1f;
   --mat-checkbox-disabled-label-color: rgba(26, 27, 31, .38)
 }
+
+.mat-accent.mat-mdc-radio-button {
+  --mdc-radio-disabled-selected-icon-color: #1a1b1f;
+  --mdc-radio-disabled-unselected-icon-color: #1a1b1f;
+  --mdc-radio-unselected-hover-icon-color: #1a1b1f;
+  --mdc-radio-unselected-icon-color: #44474e;
+  --mdc-radio-unselected-pressed-icon-color: #1a1b1f;
+  --mdc-radio-selected-focus-icon-color: var(--primary-color) !important;
+  --mdc-radio-selected-hover-icon-color: var(--primary-color) !important;
+  --mdc-radio-selected-icon-color: var(--primary-color) !important;
+  --mdc-radio-selected-pressed-icon-color: var(--primary-color) !important;
+  --mdc-form-field-label-text-color: #1a1b1f;
+  --mat-radio-ripple-color: #1a1b1f;
+  --mat-radio-checked-ripple-color: var(--primary-color) !important;
+  --mat-radio-disabled-label-color: rgba(26, 27, 31, .38)
+}
