make dialogdata optional in cgu

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -49,8 +49,8 @@
             {{ 'profile.enable' | translate }}
           </mat-slide-toggle>
           <mat-form-field>
-            <mat-label class="label"
-              >{{ 'profile.mobilePhoneNumber' | translate }}
+            <mat-label class="label">
+              {{ 'profile.mobilePhoneNumber' | translate }}
             </mat-label>
 
             <input
