--- a/src/app/cgu/cgu.component.scss
+++ b/src/app/cgu/cgu.component.scss
@@ -25,15 +25,17 @@
 }
 
 .container {
-  display: block;
-  margin: 30px auto;
   width: 70%;
+  height: 100%;
+  display: block;
+  overflow: hidden;
+  margin: 30px auto;
+
 }
 
 .custom-card {
   width: 80%;
   height: 80%;
-  overflow: auto;
   @media (max-width: 598px) {
     height: 100%;
     width: 100%;
@@ -68,14 +70,13 @@ markdown ::ng-deep {
 
 .title {
   text-align: center;
-  margin: 80px auto 40px;
   font-size: 1.2em;
 }
 
 .back {
-  text-align: center;
   display: block;
-  margin-top: 20px;
+  margin-top: 10px;
+  text-align: center;
 }
 
 @media screen and (max-width: 800px) {
@@ -97,19 +98,35 @@ markdown ::ng-deep {
   color: var(--app-white);
 }
 
+.fixed-container {
+  //top: 10px;
+  //position: sticky;
+}
+
+
+.scrollable-container {
+  overflow: auto;
+  position: relative;
+  height: calc(100% - 288px);
+
+}
+
 .country-select {
   margin-top: 10px;
   cursor: pointer;
-  left: calc(50% - 21px);
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
+  justify-content: center;
 
   .sl-container {
+    gap: 16px;
     display: flex;
-    align-items: center;
-    height: 42px;
+    flex-wrap: wrap;
+    margin-top: 10px;
     position: relative;
+    align-items: center;
+    justify-content: center;
   }
 
   .lang {
