add some missing translations

--- a/src/app/invite-form/invite-form.component.html
+++ b/src/app/invite-form/invite-form.component.html
@@ -197,8 +197,8 @@
                 formControlName="messageService"
                 class="provider-radio-group"
                 *ngIf="showRadioGroup">
-                <mat-radio-button value="1">Whatsapp</mat-radio-button>
-                <mat-radio-button value="2">SMS</mat-radio-button>
+                <mat-radio-button value="1">{{'profile.whatsapp' | translate}}</mat-radio-button>
+                <mat-radio-button value="2">{{'profile.sms' | translate}}</mat-radio-button>
               </mat-radio-group>
               <mat-error
                 class="form-error"
@@ -353,8 +353,8 @@
             formControlName="guestContactMessageService"
             class="provider-radio-group"
             *ngIf="showGuestRadioGroup">
-            <mat-radio-button value="1">Whatsapp</mat-radio-button>
-            <mat-radio-button value="2">SMS</mat-radio-button>
+            <mat-radio-button value="1">{{'profile.whatsapp' | translate}}</mat-radio-button>
+            <mat-radio-button value="2">{{'profile.sms' | translate}}</mat-radio-button>
           </mat-radio-group>
           <mat-error
             class="form-error"
@@ -452,8 +452,8 @@
                       <mat-radio-group
                         formControlName="messageService"
                         class="provider-radio-group">
-                        <mat-radio-button value="1">Whatsapp</mat-radio-button>
-                        <mat-radio-button value="2">SMS</mat-radio-button>
+                        <mat-radio-button value="1">{{'profile.whatsapp' | translate}}</mat-radio-button>
+                        <mat-radio-button value="2">{{'profile.sms' | translate}}</mat-radio-button>
                       </mat-radio-group>
                     </div>
                     <mat-error
