--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -51,6 +51,12 @@ dd {
   }
 }
 
+.provider-radio-group {
+  gap: 10px;
+  display: flex;
+  margin-bottom: 30px;
+}
+
 .cards-container {
   display: flex;
   margin-top: 30px;
