--- a/src/app/invite-form/invite-form.component.html
+++ b/src/app/invite-form/invite-form.component.html
@@ -270,6 +270,7 @@
               </mat-label>
 
               <app-date-time-picker
+                [date]="data.scheduledFor"
                 [selectedTimezone]="selectedTimezone"
                 (timeZoneSelected)="onTimeZoneSelect($event)"
                 (dateTimeSelected)="
