--- a/src/app/invite-form/invite-form.component.html
+++ b/src/app/invite-form/invite-form.component.html
@@ -480,7 +480,7 @@
           </div>
 
           <div
-            *ngIf="this.translate.currentLang !== this.data.language"
+            *ngIf="false"
             class="field-container mt-14">
             <mat-checkbox
               formControlName="inviteTranslatorFormControl"
